# haven-second-brain

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  eslint.config.cjs  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  rust-toolchain.toml  solo.yml  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/skills/haven-architect/: SKILL.md
.agents/skills/haven-localmodel/: SKILL.md
.agents/skills/haven-m1-orchestrator/: SKILL.md
.agents/skills/haven-memory/: SKILL.md
.agents/skills/haven-prior-art/: SKILL.md
.agents/skills/haven-r0-orchestrator/: SKILL.md
.agents/skills/haven-research-selector/: SKILL.md
.agents/skills/haven-sync/: SKILL.md
.agents/skills/haven-threat-model/: SKILL.md
.github/workflows/: ci.yml
_workspace/: 00_objective.md  04_adrs_index.md  09_r0_exit_evidence.md  10_phase1_pr_evidence.md  11_phase1_finish_pr_body.md  11_phase1_finish_pr_evidence.md  pr_body.md
crates/haven-git/: Cargo.toml
crates/haven-git/src/: lib.rs  safe.rs  watch.rs
crates/haven-git/tests/: safe_existing_vault.rs
crates/haven-index/: Cargo.toml
crates/haven-index/src/: lib.rs
crates/okf/: Cargo.toml
crates/okf/src/: lib.rs  linter.rs  parser.rs
docs/adr/: 000-r0-exit-evidence.md  001-monorepo-scaffold.md  001-okf-adoption.md  002-editor-roundtrip.md  003-git-write-policy.md  004-local-runtime-and-network-posture.md  005-sync-collaboration.md  006-memory-engine.md  007-local-model-selection.md  008-editor-shell-completion.md  009-pkm-ux-surface.md  010-bases-lite-derived-view.md
docs/fixtures/notes-200/: 000-project-plan.md  001-meeting-notes.md  002-research-note.md  003-decision.md  004-reading-list.md  005-tracking-todo.md  006-question.md  007-review.md  008-journal.md  009-recipe.md  010-quote.md  011-definition.md  012-reference.md  013-glossary.md  014-experiment.md  015-hypothesis.md  016-observation.md  017-summary.md  018-analysis.md  019-spec.md  020-project-plan.md  021-meeting-notes.md  022-research-note.md  023-decision.md  024-reading-list.md  025-tracking-todo.md  026-question.md  027-review.md  028-journal.md  029-recipe.md  030-quote.md  031-definition.md  032-reference.md  033-glossary.md  034-experiment.md  035-hypothesis.md  036-observation.md  037-summary.md  038-analysis.md  039-spec.md  (+160 more)
docs/fixtures/obsidian-readonly/: legacy-note.md  okf-note.md  readme.md  scratch.md
docs/harness/haven/: team-spec.md
docs/research/: knowledge-diff-fixtures.md  longmem-eval-bakeoff.md  prior-art-register.md  threat-model.md
docs/superpowers/specs/: 2026-07-10-haven-clean-rebuild-design.md  alpha-success-metrics.md  hardware-model-matrix.md  launch-workflows.md  research-selector.md  safe-existing-vault.md
scripts/: gen-okf-fixtures.mjs  okf-lint.mjs
src/: index.html  main.ts  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ipc.rs  lib.rs  main.rs
src/lib/: ipc.ts
src/src/components/bases/: index.ts  query.ts  view.ts
src/src/components/editor/: backlinks.ts  filetree.ts  index.ts  journal.ts  search.ts
src/src/lib/: editor.ts  ipc.ts  roundtrip.ts
src/src/tests/: bases-lite.test.ts  editor-surface.test.ts  roundtrip.test.ts
