[workspace]
resolver = "2"
members = [
    "crates/okf",
    "crates/haven-git",
    "crates/haven-index",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
git2 = { version = "0.18", default-features = false }
tempfile = "3"
proptest = "1"
sha2 = "0.10"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
notify = "6"
chrono = { version = "0.4", features = ["serde"] }
ulid = "1"
parking_lot = "0.12"
opener = "0.7"
url = { version = "2", features = ["serde"] }
once_cell = "1"
ignore = "0.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
incremental = true
