[package]
name = "haven"
description = "Haven — a local-first, git-native second brain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "haven_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tokio.workspace = true
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
okf = { path = "../crates/okf" }
haven-git = { path = "../crates/haven-git" }
haven-index = { path = "../crates/haven-index" }
