[package]
name = "haven-git"
description = "Git repository operations for Haven: staged writes, dual-identity commits, FS watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
git2 = "0.20"
notify = { version = "7", default-features = false, features = ["macos_fsevent"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
