[package]
name = "haven-git"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
sha2 = { workspace = true }
parking_lot = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
opener = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
walkdir = { workspace = true }
ignore = { workspace = true }
