[package]
name = "haven-index"
description = "SQLite-backed search and graph index for Haven: FTS5, sqlite-vec, edge table, disposable rebuild"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Vector storage via sqlite-vec. Gated so the default build stays stable; the
# `vec0` extension init is only linked when explicitly requested. The index is
# disposable either way — vectors are re-derivable from the bundle.
vector = ["sqlite-vec"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
parking_lot.workspace = true
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }
# sqlite-vec is optional to keep default builds non-blocking (see `vector` feature).
sqlite-vec = { version = "0.1", optional = true }
anyhow.workspace = true
chrono = { version = "0.4", features = ["serde"] }
# OKF parser — used to read conformant documents during a bundle rebuild.
okf = { path = "../okf" }

[dev-dependencies]
tempfile = "3"
