[package]
name = "okf"
description = "Open Knowledge Format v0.1 parser, serializer, and conformance linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_yaml = "0.9"
regex = "1"

[dev-dependencies]
proptest = "1"
